--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -2912,7 +2912,7 @@ textarea.form-control-lg {
 .btn {
   --bs-btn-padding-x: 0.75rem;
   --bs-btn-padding-y: 0.375rem;
-  --bs-btn-font-family: ;
+  --bs-btn-font-family: lato,sans-serif
   --bs-btn-font-size: 1rem;
   --bs-btn-font-weight: 400;
   --bs-btn-line-height: 1.5;
@@ -2977,20 +2977,23 @@ textarea.form-control-lg {
 }
 
 .btn-primary {
-  --bs-btn-color: #fff;
-  --bs-btn-bg: #0d6efd;
-  --bs-btn-border-color: #0d6efd;
-  --bs-btn-hover-color: #fff;
-  --bs-btn-hover-bg: #0b5ed7;
-  --bs-btn-hover-border-color: #0a58ca;
+  --bs-btn-color: #322724;
+  --bs-btn-bg: #F5DBAE;
+  --bs-btn-border-color: #F5DBAE;
+  --bs-btn-hover-color: #322724;
+  --bs-btn-hover-bg: #F5DBAE;
+  --bs-btn-hover-border-color: #F5DBAE;
   --bs-btn-focus-shadow-rgb: 49, 132, 253;
-  --bs-btn-active-color: #fff;
-  --bs-btn-active-bg: #0a58ca;
-  --bs-btn-active-border-color: #0a53be;
+  --bs-btn-active-color: #322724;
+  --bs-btn-active-bg: #F5DBAE;
+  --bs-btn-active-border-color: #F5DBAE;
   --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
-  --bs-btn-disabled-color: #fff;
-  --bs-btn-disabled-bg: #0d6efd;
-  --bs-btn-disabled-border-color: #0d6efd;
+  --bs-btn-disabled-color: #322724;
+  --bs-btn-disabled-bg: #F5DBAE;
+  --bs-btn-disabled-border-color: #F5DBAE;
+  border-radius: 50px;
+  width: 10rem;
+
 }
 
 .btn-secondary {
@@ -3011,20 +3014,21 @@ textarea.form-control-lg {
 }
 
 .btn-success {
-  --bs-btn-color: #fff;
-  --bs-btn-bg: #198754;
-  --bs-btn-border-color: #198754;
-  --bs-btn-hover-color: #fff;
-  --bs-btn-hover-bg: #157347;
-  --bs-btn-hover-border-color: #146c43;
+  --bs-btn-color: #322724;
+  --bs-btn-bg: #F4DAAD;
+  --bs-btn-border-color: #F4DAAD;
+  --bs-btn-hover-color: #322724;
+  --bs-btn-hover-bg: #F4DAAD;
+  --bs-btn-hover-border-color: #F4DAAD;
   --bs-btn-focus-shadow-rgb: 60, 153, 110;
-  --bs-btn-active-color: #fff;
-  --bs-btn-active-bg: #146c43;
-  --bs-btn-active-border-color: #13653f;
+  --bs-btn-active-color: #322724;
+  --bs-btn-active-bg: ##F4DAAD;
+  --bs-btn-active-border-color: #F4DAAD;
   --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
-  --bs-btn-disabled-color: #fff;
-  --bs-btn-disabled-bg: #198754;
-  --bs-btn-disabled-border-color: #198754;
+  --bs-btn-disabled-color: #322724;
+  --bs-btn-disabled-bg: #F4DAAD;
+  --bs-btn-disabled-border-color: #F4DAAD;
+  border-radius: 50px;
 }
 
 .btn-info {
@@ -4077,7 +4081,7 @@ textarea.form-control-lg {
     position: absolute;
   }
   .navbar-expand-lg .navbar-nav .nav-link {
-    padding-right: var(--bs-navbar-nav-link-padding-x);
+    padding-right: 3rem;
     padding-left: var(--bs-navbar-nav-link-padding-x);
   }
   .navbar-expand-lg .navbar-nav-scroll {
@@ -4086,6 +4090,7 @@ textarea.form-control-lg {
   .navbar-expand-lg .navbar-collapse {
     display: flex !important;
     flex-basis: auto;
+    margin-right: 3rem;
   }
   .navbar-expand-lg .navbar-toggler {
     display: none;
@@ -4266,10 +4271,9 @@ textarea.form-control-lg {
 .card {
   --bs-card-spacer-y: 1rem;
   --bs-card-spacer-x: 1rem;
-  --bs-card-title-spacer-y: 0.5rem;
+  --bs-card-title-spacer-y: 2rem;
   --bs-card-border-width: 1px;
   --bs-card-border-color: var(--bs-border-color-translucent);
-  --bs-card-border-radius: 0.375rem;
   --bs-card-box-shadow: ;
   --bs-card-inner-border-radius: calc(0.375rem - 1px);
   --bs-card-cap-padding-y: 0.5rem;
@@ -4281,16 +4285,14 @@ textarea.form-control-lg {
   --bs-card-bg: #fff;
   --bs-card-img-overlay-padding: 1rem;
   --bs-card-group-margin: 0.75rem;
-  position: relative;
   display: flex;
   flex-direction: column;
   min-width: 0;
-  height: var(--bs-card-height);
   word-wrap: break-word;
-  background-color: var(--bs-card-bg);
-  background-clip: border-box;
-  border: var(--bs-card-border-width) solid var(--bs-card-border-color);
-  border-radius: var(--bs-card-border-radius);
+  margin: 3rem;
+  max-width: 30rem;
+  position: absolute;
+
 }
 .card > hr {
   margin-right: 0;
@@ -4392,12 +4394,6 @@ textarea.form-control-lg {
 }
 
 .card-img,
-.card-img-top {
-  border-top-left-radius: var(--bs-card-inner-border-radius);
-  border-top-right-radius: var(--bs-card-inner-border-radius);
-}
-
-.card-img,
 .card-img-bottom {
   border-bottom-right-radius: var(--bs-card-inner-border-radius);
   border-bottom-left-radius: var(--bs-card-inner-border-radius);
@@ -4407,6 +4403,33 @@ textarea.form-control-lg {
   margin-bottom: var(--bs-card-group-margin);
 }
 @media (min-width: 576px) {
+
+  .card {
+    --bs-card-spacer-y: 1rem;
+    --bs-card-spacer-x: 1rem;
+    --bs-card-title-spacer-y: 2rem;
+    --bs-card-border-width: 1px;
+    --bs-card-border-color: var(--bs-border-color-translucent);
+    --bs-card-box-shadow: ;
+    --bs-card-inner-border-radius: calc(0.375rem - 1px);
+    --bs-card-cap-padding-y: 0.5rem;
+    --bs-card-cap-padding-x: 1rem;
+    --bs-card-cap-bg: rgba(0, 0, 0, 0.03);
+    --bs-card-cap-color: ;
+    --bs-card-height: ;
+    --bs-card-color: ;
+    --bs-card-bg: #fff;
+    --bs-card-img-overlay-padding: 1rem;
+    --bs-card-group-margin: 0.75rem;
+    display: flex;
+    flex-direction: column;
+    min-width: 0;
+    word-wrap: break-word;
+    margin: 20rem 0 0 3rem;
+    max-width: 30rem;
+    position: absolute;
+  
+  }
   .card-group {
     display: flex;
     flex-flow: row wrap;
@@ -4485,6 +4508,35 @@ textarea.form-control-lg {
   overflow-anchor: none;
   transition: var(--bs-accordion-transition);
 }
+
+@media (min-width: 300px) {
+
+  .card {
+    --bs-card-spacer-y: 1rem;
+    --bs-card-spacer-x: 1rem;
+    --bs-card-title-spacer-y: 2rem;
+    --bs-card-border-width: 1px;
+    --bs-card-border-color: var(--bs-border-color-translucent);
+    --bs-card-box-shadow: ;
+    --bs-card-inner-border-radius: calc(0.375rem - 1px);
+    --bs-card-cap-padding-y: 0.5rem;
+    --bs-card-cap-padding-x: 1rem;
+    --bs-card-cap-bg: rgba(0, 0, 0, 0.03);
+    --bs-card-cap-color: ;
+    --bs-card-height: ;
+    --bs-card-color: ;
+    --bs-card-bg: #fff;
+    --bs-card-img-overlay-padding: 1rem;
+    --bs-card-group-margin: 0.75rem;
+    display: flex;
+    flex-direction: column;
+    min-width: 0;
+    word-wrap: break-word;
+    margin: 10rem 0 0 3rem;
+    max-width: 30rem;
+    position: absolute;
+  
+  }
 @media (prefers-reduced-motion: reduce) {
   .accordion-button {
     transition: none;
@@ -7198,11 +7250,11 @@ textarea.form-control-lg {
 }
 
 .d-flex {
-  display: flex !important;
+  display: flex;
 }
 
 .d-inline-flex {
-  display: inline-flex !important;
+  display: inline-flex ;
 }
 
 .d-none {
@@ -9166,7 +9218,7 @@ textarea.form-control-lg {
   }
 
   .d-md-flex {
-    display: flex !important;
+    display: flex ;
   }
 
   .d-md-inline-flex {
