--- a/css/main.css
+++ b/css/main.css
@@ -1,71 +1,288 @@
-a{
-    text-decoration: none;
-    color: #322724;
+main{
+  margin: 4rem;
+}
+.historia p{
+  color: #322724;
+}
+
+.sesiones h1,
+.sesiones p,
+.flores p,
+.flores h1,
+.imagenes h1
+{
+color: #322724;
+font-family: lato, sans-serif;
+}
+h3,p{
+  color: #322724;
+}
+
+a {
+  text-decoration: none;
+  color: #322724;
 }
 .container-fluid {
-    background-color: #FBC3B3;
+  background-color: #fbc3b3;
 }
 
 .container-fluid img {
-    width: 3rem;
-    margin: 0 0 0 3rem;
- }
-
-h4 {
-    padding: 0 2rem 0 0;
-    font-size: 16px;
-    color:#322724;
-    font-family: lato, sans-serif;
+  width: 3rem;
+  margin: 0 0 0 3rem;
 }
 
-h4 :hover {
-    color: aqua;
+.card-title{
+  color: #322724;
+}
+h1{
+  font-size: 30px;
+  font-family: lato, sans-serif;
+  color: #4A2912;
 }
 
-.contenedor{
-    position: relative;
-    display: inline-block;
-    text-align: left;
+.contenedor {
+  position: relative;
+  display: inline-block;
+  text-align: left;
 }
-
 
 .col-md-6 {
-    position: absolute;
-    top: 10px;
-  }
+  position: absolute;
+  top: 10px;
+}
 
-  .col-md-6 h1{
-    position: absolute;
-    margin: 0em 0rem 0 5rem;
-    font-size: 30px;
-    color: #322724;
-    font-family: lato, sans-serif;
-    column-gap: 10px;
-}
-.col-md-6 img{
-width: 27rem;
-margin: 10em 0rem 0 3rem ;
-}
 
 .col-md-9 img {
-    max-width: 100%;
-
+ width: 100%;
+  margin-left: auto;
+  margin-right: auto; /* Le agregué esto. Es de la foto principal. */
+  position: absolute;
 }
 
 .col-md-6 button {
-    position: relative;
-    background-color: #F4DAAD;
-    width: 10rem;
-    padding: 0.5em;
-    margin: 7rem 0 0 4rem;
-    border-radius: 10rem;
-    color: #322724;
-    text-align: center;
+  position: relative;
+  background-color: #f4daad;
+  width: 10rem;
+  padding: 0.5em;
+  margin: 7rem 0 0 4rem;
+  border-radius: 10rem;
+  color: #322724;
+  text-align: center;
 }
 
-.boton{
-    width: 6rem;
-    background-color: #F4DAAD;
+.boton {
+  width: 6rem;
+  background-color: #f4daad;
 
-    color: #322724;
+  color: #322724;
+}
+
+.img-centro {
+  margin: 10px auto 10px;
+  display: block;
+}
+
+h2 {
+  font-size: 22px;
+  text-align: left;
+  font-family: lato, sans-serif;
+  margin: 2rem;
+}
+
+.imagenes img {
+  position: relative;
+ max-width: 100%;
+ padding: 1rem;
+}
+
+.imagenes2 img{
+  padding: 1rem;
+  position: relative;
+  max-width: 100%;
+  width: 35rem;
+}
+
+.preguntas {
+  font-size: 20px;
+  background-color: #CAB9C0;
+  color: #644E48;
+  padding: 0.5rem;
+  align-content: center;
+  margin: 1rem 0 0 0;
+}
+
+.respuestas {
+  font-size: 16px;
+  background-color: #FDECF3;
+  padding: 0.5rem;
+  color: #644E48;
+
+}
+
+
+.slider{
+  width: 95%;
+  margin: auto;
+  overflow: hidden;
+}
+
+.slider ul{
+  display: flex;
+  padding: 0;
+  width: 200%;
+
+  animation: cambio 4s infinite alternate;
+}
+
+.slider li{
+  padding: 0.5rem;
+  width: 100%;
+  list-style: none;
+}
+
+.slider img{
+width: 100%;
+}
+
+@keyframes cambio {
+  0% {margin-left: 0;}
+  50%{margin-left: 0;}
+
+  55%{margin-left: -100%;}
+  100%{margin-left: -100%}
+
+}
+
+.historia{
+  margin: 3rem;
+  font-size: 14px;
+}
+
+.firma img{
+ max-width: 100%;
+ width: 30rem;
+}
+
+.links img{
+min-width: 1px;
+padding: 1rem;
+
+}
+
+.container {
+  max-width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  background-color: #D6F1F1;
+  max-width: 100% ;
+  width: 32rem;
+  padding: 1rem;
+  border-radius: 10px;
+  position: relative;
+  flex: auto;
+  grid-column: auto;
+  margin: 1rem 3rem 1rem 1rem;
+}
+.container img{
+  max-width: 30rem;
+}
+h1 {
+  color: #32B7BB;
+  justify-content: baseline;
+
+}
+
+p {
+ font-size: 1.2em;
+ padding: 0em 2em;
+ color: rgba(0, 0, 0, .5);
+ justify-content: baseline;
+}
+
+.readMore_btn {
+  background-color: #32B7BB;
+  border: none;
+  border-radius: 40px;
+  color: white;
+  padding: 0.5rem;
+  font-size: 1.2em;
+  box-shadow: 0px 0px 10px 0px #32B7BB;
+  cursor: pointer;
+  font-size: 14px;
+  width: 10rem;
+}
+
+.readMore_btn:hover {
+  box-shadow: none;
+  background-color: #4A2912;
+  color: #fff;
+  transition: cubic-bezier(0.075, 0.82, 0.165, 1) 3.05s;
+}
+
+.readMore_btn2 {
+  background-color: #32B7BB;
+  border: none;
+  border-radius: 40px;
+  color: white;
+  padding: 0.5rem;
+  font-size: 1.2em;
+  box-shadow: 0px 0px 10px 0px #32B7BB;
+  cursor: pointer;
+  font-size: 14px;
+  width: 10rem;
+}
+
+.readMore_btn2:hover {
+  box-shadow: none;
+  background-color: #4A2912;
+  color: #fff;
+  transition: cubic-bezier(0.075, 0.82, 0.165, 1) 3.05s;
+}
+ 
+.hideText {
+  display: none;
+}
+
+.showText {
+  display: block;
+}
+
+.hideText2 {
+  display: none;
+}
+
+.showText2 {
+  display: block;
+}
+
+.flores_bach{
+  display: flex;
+  grid-template-columns: repeat(4,1fr);
+  background-color: #FDE7E1 ;
+  border-radius: 10px;
+}
+
+.flores{
+
+  display: flex;
+  flex-direction: column;
+  padding: 10px;
+}
+
+.flores h4{
+  font-size: 20px;
+  margin-bottom: 1em;
+  padding: 1rem;
+}
+.flores p{
+  font-size: 16px;
+}
+.flores p,
+.flores h4{
+  color: #4A2912;
+}
+
+.flores_bach img{
+width: 30rem;
 }
